--- a/Portofolio-Projects/style.css
+++ b/Portofolio-Projects/style.css
@@ -42,8 +42,19 @@ a:hover {
     text-decoration: none;
 }
 
+.section-plum {
+    background-color: var(--plum);
+}
+
+.gradient {
+    background: linear-gradient(90deg, rgba(255,23,228,1) 0%, rgba(134,251,251,1) 100%);
+    height: 2px;
+}
+
 #intro {
-    padding-bottom: 10rem;
+    padding: 4rem 1rem 10rem 1rem;
+    max-width: 1200px;
+    margin: auto;
 }
 
 #intro p { 
@@ -71,7 +82,7 @@ a:hover {
 #contact {
     width: 400px;
     text-align: center;
-    margin:auto 0;
+    margin: 0 auto;
     padding: 3rem 0;
 }
 
@@ -118,3 +129,57 @@ nav h1 [class*="fa-"] {
 nav a {
     color: var(--white);
     text-decoration: none;
+}
+
+.button {
+    background-color: var(--magenta);
+    color: white;
+    padding: 0.5rem;
+    border-radius: 5px;
+    font-family: var(--mono);
+    text-decoration: none;
+}
+
+.button:hover {
+    color: var(--white);
+    background-color: var(--hotmag);
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 4rem 0;
+}
+
+footer h2 {
+    text-align: center;
+}
+
+footer ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 2rem 0;
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+    gap: 3rem;
+    font-size: 3rem;
+}
+
+@media (min-width: 852px) {
+    nav {
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+
+    nav li:first-child {
+        flex-basis:auto;
+        text-align: left;
+        margin-right: auto;
+    }
+}
+
+
+
